# test_opengl_io

./: CMakeLists.txt  main.cpp
3rd/glad-3.3/include/glad/: glad.h
3rd/glad-3.3/src/: glad.c
3rd/glad-4.50/include/glad/: glad.h
3rd/glad-4.50/src/: glad.c
camera/: camera.h
io/: model.h
shader/: light_shader_vertex.vs  object_shader_fragment.fs  object_shader_vertex.vs  shader.cpp  shader.h
shader/old/: light_shader_fragment.fs  object_shader_vertex.vs
texture/: texture.h
